--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
           USER: ${{ secrets.SSH_USER }}
           HOST: ${{ secrets.SSH_HOST }}
         run: |
-          ssh -v $USER@$HOST "cd /var/www/jflarouche.ca/jfl-portfolio && git pull && npm install && npm run build:prod"
+          ssh -v $USER@$HOST "cd /var/www/jflarouche.ca/jfl-portfolio && git pull && npm install && npm run build"
